[tool.poetry]
name = "adp_py_lib"
version = "0.1.0"
description = "ADP Python Library"
authors = ["Sunny S <shahisunny.990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
